feat(modules): 新增 business模块
- 添加 ruoyi-business 模块，用于演示和测试业务功能
- 在 admin项目中集成 business 模块- 添加测试控制器和映射文件
- 更新模块列表和依赖管理

--- a/pom.xml
+++ b/pom.xml
@@ -364,6 +364,12 @@
                 <version>${revision}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.dromara</groupId>
+                <artifactId>ruoyi-business</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
