feat(business): 重构业务模块并添加日志切面
- 重构 TestController，调整包结构
- 在 pom.xml 中添加 fastjson 依赖
- 新增 LogAspect 类，实现请求日志切面

--- a/ruoyi-modules/ruoyi-business/pom.xml
+++ b/ruoyi-modules/ruoyi-business/pom.xml
@@ -103,6 +103,11 @@
             <artifactId>ruoyi-common-websocket</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
