build.ruoyi: 实现热部署功能,关闭监控中心,工作流,任务调度三个模块
- 添加 Spring Boot DevTools 依赖，实现热部署功能
- 修改application.yml配置文件，开启 DevTools 热部署设置- 更新项目结构文档，增加 DevTools 相关说明
- 关闭了监控中心配置与snail-job任务调度功能
- 关闭warm-flow工作流（因为在触发热部署后，会出现报错：Error creating bean with name 'initFlow' defined in class path resource）

--- a/ruoyi-admin/pom.xml
+++ b/ruoyi-admin/pom.xml
@@ -104,6 +104,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+
         <!-- skywalking 整合 logback -->
 <!--        <dependency>-->
 <!--            <groupId>org.apache.skywalking</groupId>-->
