feat(business): 集成阿里云视频点播服务
- 新增阿里云 VOD 相关配置
- 添加阿里云 SDK 依赖
- 实现视频上传和管理相关功能
- 添加VOD 控制器和相关实体类
- 优化 .gitignore 文件 （屏蔽本地变量文件）
- 备注：创建授权会在视频点播服务器里新增一条记录，状态是：上传中

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
         <!--工作流配置-->
         <warm-flow.version>1.6.8</warm-flow.version>
 
+        <!-- 阿里云VOD -->
+        <aliyun-java-sdk-core.version>4.5.1</aliyun-java-sdk-core.version>
+        <aliyun-sdk-oss.version>3.10.2</aliyun-sdk-oss.version>
+        <aliyun-java-sdk-vod.version>2.16.11</aliyun-java-sdk-vod.version>
+
         <!-- 插件版本 -->
         <maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
         <maven-war-plugin.version>3.2.2</maven-war-plugin.version>
@@ -368,6 +373,23 @@
                 <groupId>org.dromara</groupId>
                 <artifactId>ruoyi-business</artifactId>
                 <version>${revision}</version>
+            </dependency>
+
+            <!-- 阿里云Vod 官方示例：https://help.aliyun.com/zh/vod/developer-reference/upload-sdk-for-java?spm=a2c4g.11186623.help-menu-29932.d_4_1_6_2_0.2ff22b83mcKKud&scm=20140722.H_53406._.OR_help-T_cn~zh-V_1 -->
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-java-sdk-core</artifactId>
+                <version>${aliyun-java-sdk-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun.oss</groupId>
+                <artifactId>aliyun-sdk-oss</artifactId>
+                <version>${aliyun-sdk-oss.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-java-sdk-vod</artifactId>
+                <version>${aliyun-java-sdk-vod.version}</version>
             </dependency>
 
         </dependencies>
