feat(plus-ui-ts): 添加语音识别功能
- 新增语音识别页面组件和对话框组件（用于上传音频）
- 实现打开对话框和关闭对话框的功能
- 添加确认操作逻辑
- 新增 ESLint 自动导入配置文件
- 更新 .gitignore 文件，忽略 ESLint 配置

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,8 @@ nbdist/
 logs/
 .run/
 .env
+plus-ui-ts/.eslintrc-auto-import.json  # 新增这一行
+
+######################################################################
+# 新增部分
+.eslintrc-auto-import.json  # 新增这一行，确保该文件被忽略
