--- a/plus-ui-ts/package.json
+++ b/plus-ui-ts/package.json
@@ -25,6 +25,7 @@
     "@vueup/vue-quill": "1.2.0",
     "@vueuse/core": "12.7.0",
     "animate.css": "4.1.1",
+    "ant-design-vue": "^4.2.6",
     "await-to-js": "3.0.0",
     "axios": "1.7.8",
     "crypto-js": "4.2.0",
