refactor(business): 新建 common-vod 模块并迁移相关功能
- 新建 ruoyi-common-vod 模块，用于处理视频点播相关功能
- 将 LogAspect 和 VodUtil 从 business 模块迁移到 vod 模块
- 更新 WebVodController 中的引用，使用新的 vod 模块中的 VodUtil
- 在 common 的 pom.xml 中添加 vod 模块引用
- 在 business 模块中添加对 vod 模块的依赖，替换原有的阿里云 SDK 依赖

--- a/ruoyi-common/ruoyi-common-bom/pom.xml
+++ b/ruoyi-common/ruoyi-common-bom/pom.xml
@@ -179,6 +179,13 @@
                 <version>${revision}</version>
             </dependency>
 
+            <!-- Business模块 -->
+            <dependency>
+                <groupId>org.dromara</groupId>
+                <artifactId>ruoyi-common-vod</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
