--- a/ruoyi-modules/ruoyi-business/pom.xml
+++ b/ruoyi-modules/ruoyi-business/pom.xml
@@ -18,10 +18,11 @@
     <dependencies>
 
         <!-- 通用工具-->
-        <dependency>
-            <groupId>org.dromara</groupId>
-            <artifactId>ruoyi-common-core</artifactId>
-        </dependency>
+        <!-- ruoyi-common-vod 已经添加过ruoyi-common-core依赖-->
+<!--        <dependency>-->
+<!--            <groupId>org.dromara</groupId>-->
+<!--            <artifactId>ruoyi-common-core</artifactId>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.dromara</groupId>
@@ -104,21 +105,8 @@
         </dependency>
 
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.aliyun</groupId>
-            <artifactId>aliyun-java-sdk-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.aliyun.oss</groupId>
-            <artifactId>aliyun-sdk-oss</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.aliyun</groupId>
-            <artifactId>aliyun-java-sdk-vod</artifactId>
+            <groupId>org.dromara</groupId>
+            <artifactId>ruoyi-common-vod</artifactId>
         </dependency>
 
     </dependencies>
