feat(vod): 10.3 添加音频转字幕收费计算功能
- 在VodUtil 类中添加 calAmount 方法，用于计算音频转字幕应收金额
- 在 WebVodController 中添加 calAmount 接口- 在 application-dev.yml 中配置语音识别单价
- 更新相关文档和 README 文件

--- a/ruoyi-admin/src/main/resources/application-dev.yml
+++ b/ruoyi-admin/src/main/resources/application-dev.yml
@@ -192,6 +192,11 @@ vod:
   accessKeyId: ${ALI_VOD_ACCESS_KEY_ID:LTAI5tV5qrL}
   accessKeySecret: ${ALI_VOD_ACCESS_KEY_SECRET:lWb9DBMjF23dJ}
 
+--- # 语音识别单价：元/分
+filetrans:
+  audio:
+    price: 0.2  # 正确配置，值为 0.2
+
 --- # 三方授权
 justauth:
   # 前端外网访问地址
