feat(ruoyi-common): 10.5 添加前端枚举生成模块
- 新增 ruoyi-common-fe-enum 模块，用于生成后端枚举给前端使用
- 添加 EnumGenerator 类，可以直接运行生成前端需要的 enums.js 文件
- 在 plus-ui-ts 公共目录下新增 enums.js 文件，包含文件传输语言、状态和支付状态的枚举
- 更新 ruoyi-common 的 pom.xml，添加 fe-enum 模块引用

--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -35,6 +35,7 @@
         <module>ruoyi-common-websocket</module>
         <module>ruoyi-common-sse</module>
         <module>ruoyi-common-vod</module>
+        <module>ruoyi-common-fe-enum</module>
     </modules>
 
     <artifactId>ruoyi-common</artifactId>
