docs(README): 10.12 idea的http测试接口增加存取登录token
- 添加关于关闭 API 接口加密的说明- 添加前端和后端配置文件的修改步骤
- 说明登录参数的对照表和示例- 新增 auth.http 文件用于登录调试
- 先请求/auth/login存储accessToken与clientId，然后在调用其他接口

--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -21,7 +21,8 @@ server:
       worker: 256
 
 captcha:
-  enable: true
+#  enable: true
+  enable: false
   # 页面 <参数设置> 可开启关闭 验证码校验
   # 验证码类型 math 数组计算 char 字符验证
   type: MATH
@@ -168,7 +169,8 @@ mybatis-encryptor:
 # api接口加密
 api-decrypt:
   # 是否开启全局接口加密
-  enabled: true
+  #enabled: true
+  enabled: false
   # AES 加密头标识
   headerFlag: encrypt-key
   # 响应加密公钥 非对称算法的公私钥 如：SM2，RSA 使用者请自行更换
