feat(audio): 10.10 前端结算功能开发, 增加pay方法
- 修复上传成功后无法获取视频时长，导致金额错误问题 （getVideoInfoWithRetry()方法）
- 前端增加字段,传到后端的参数

--- a/plus-ui-ts/package.json
+++ b/plus-ui-ts/package.json
@@ -39,6 +39,7 @@
     "jsencrypt": "3.3.2",
     "nprogress": "0.2.0",
     "pinia": "2.2.6",
+    "radash": "^12.1.0",
     "screenfull": "6.0.2",
     "vue": "3.5.13",
     "vue-cropper": "1.1.1",
