--- a/ruoyi-common/ruoyi-common-vod/pom.xml
+++ b/ruoyi-common/ruoyi-common-vod/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.dromara</groupId>
         <artifactId>ruoyi-common</artifactId>
-        <version>5.3.1</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>ruoyi-common-vod</artifactId>
