feat(订单): 添加订单模块- 新增 ruoyi-order模块
- 实现订单信息相关的实体类、Mapper、Service 和 Controller
- 添加订单信息表的 SQL 脚本
- 集成支付宝支付相关文档和示例代码

--- a/pom.xml
+++ b/pom.xml
@@ -375,6 +375,12 @@
                 <version>${revision}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.dromara</groupId>
+                <artifactId>ruoyi-order</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
             <!-- 阿里云Vod 官方示例：https://help.aliyun.com/zh/vod/developer-reference/upload-sdk-for-java?spm=a2c4g.11186623.help-menu-29932.d_4_1_6_2_0.2ff22b83mcKKud&scm=20140722.H_53406._.OR_help-T_cn~zh-V_1 -->
             <dependency>
                 <groupId>com.aliyun</groupId>
