feat(order): 11.6 添加支付宝支付功能- 新增支付宝支付相关配置和接口
- 语音识别结算时, 保存订单信息
- 引入支付宝EasySDK, 对接统一收单并支付页面接口 （沙箱环境的配置参数, 非正式）
- 前端设置默认支付渠道是：支付宝 A
- 调用支付宝下单接口成功, 支付宝返回form表单

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,10 @@
         <aliyun-sdk-oss.version>3.10.2</aliyun-sdk-oss.version>
         <aliyun-java-sdk-vod.version>2.16.11</aliyun-java-sdk-vod.version>
 
+        <!-- 支付宝支付 -->
+        <alipay-easysdk.version>2.2.3</alipay-easysdk.version>
+        <alipay-sdk-java.version>4.40.231.ALL</alipay-sdk-java.version>
+
         <!-- 插件版本 -->
         <maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
         <maven-war-plugin.version>3.2.2</maven-war-plugin.version>
@@ -396,6 +400,20 @@
                 <groupId>com.aliyun</groupId>
                 <artifactId>aliyun-java-sdk-vod</artifactId>
                 <version>${aliyun-java-sdk-vod.version}</version>
+            </dependency>
+
+            <!-- 支付宝支付 Easy版SDK -->
+            <dependency>
+                <groupId>com.alipay.sdk</groupId>
+                <artifactId>alipay-easysdk</artifactId>
+                <version>${alipay-easysdk.version}</version>
+            </dependency>
+
+            <!-- 支付宝支付 通用版SDK 异步通知需要 -->
+            <dependency>
+                <groupId>com.alipay.sdk</groupId>
+                <artifactId>alipay-sdk-java</artifactId>
+                <version>${alipay-sdk-java.version}</version>
             </dependency>
 
         </dependencies>
